[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/icons/ship.png" type="Texture" id=1]
[ext_resource path="res://assets/icons/react.png" type="Texture" id=2]
[ext_resource path="res://assets/icons/swap-horizontal-bold.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/godot_icon.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/autorenew.png" type="Texture" id=5]
[ext_resource path="res://prefabs/ui/game/planet_actions/planet_actions.gd" type="Script" id=6]

[node name="PlanetActions" type="VBoxContainer"]
margin_right = 36.0
margin_bottom = 120.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterResearch" type="CenterContainer" parent="."]
margin_right = 36.0
margin_bottom = 24.0

[node name="Research" type="TextureButton" parent="CenterResearch"]
margin_left = 6.0
margin_right = 30.0
margin_bottom = 24.0
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Produce" type="MenuButton" parent="."]
margin_top = 28.0
margin_right = 36.0
margin_bottom = 58.0
icon = ExtResource( 1 )

[node name="Convert" type="MenuButton" parent="."]
margin_top = 62.0
margin_right = 36.0
margin_bottom = 92.0
icon = ExtResource( 5 )

[node name="CenterTransfer" type="CenterContainer" parent="."]
margin_top = 96.0
margin_right = 36.0
margin_bottom = 120.0

[node name="Swap" type="TextureButton" parent="CenterTransfer"]
margin_left = 6.0
margin_right = 30.0
margin_bottom = 24.0
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 4 )
[connection signal="pressed" from="Produce" to="." method="_on_produce"]
[connection signal="pressed" from="Convert" to="." method="_on_convert"]
[connection signal="pressed" from="CenterTransfer/Swap" to="." method="_on_swap"]
